--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,7 @@
-<form method="post">
+<form method="post" action="/accounts/login/">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Войти</button>
+  <input type="submit" value="Войти">
 </form>
 <div class="social">
     <p>Войти с помощью соц сетей</p>
